# cued-speech

./: BUILDING_WITHOUT_DATA.md  CHANGES_SUMMARY.md  DECODER_COMPARISON.md  Dockerfile  GENERATION_IMPLEMENTATION.md  MODEL_QUALITY_IMPROVEMENTS.md  PROJECT_SUMMARY.md  PUBLICATION_CHECKLIST.md  README.md  TASK_FILE_SUPPORT.md  TROUBLESHOOTING.md  batch_process_videos_parallel.py  batch_process_videos_sequential.py  boost.sh  build_package.py  check_videos.py  download_tflite_models.sh  example_enhanced_usage.py  job_gpu.sh  monitor_progress.py  pixi copy.toml  pixi.toml  prepare_github_release.py  process_all_videos.py  pyproject.toml  test.py  test_cli_enhanced.py  test_data_manager.py  test_enhanced_generator.py  test_filename_output.py  test_generator_basic.py  test_generator_fallback.py  test_generator_fixed.py  test_mfa_detection.py  test_mfa_fix.py
.history/cpp/: decoder_20251030172619.h  demo_decode_20251030170146.cpp
cpp/: CMakeLists.txt  Config.cmake.in  FLUTTER_INTEGRATION.md  IMPLEMENTATION_NOTES.md  QUICK_START.md  decoder.cpp  decoder.h  decoder_c_api.cpp  decoder_c_api.h  demo_decode.cpp  example_usage.c
cpp/tensorflow/lite/core/async/interop/c/: types.h
cpp/tensorflow/lite/profiling/telemetry/: profiler.h
cpp/tensorflow/lite/profiling/telemetry/c/: telemetry_setting_internal.h
output/generator/mfa_input/: audio.lab
scripts/: convert_to_tflite.py
src/cued_speech/: cli.py  decoder.py  decoder_tflite.py  generator.py
src/cued_speech/data/: lexicon.txt
